--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "DevEd Autodocs",
+  "name": "chainguard-dev/deved-autodocs",
   "description": "Automated Docs - Chainguard DevEdu team",
   "license": "MIT",
   "homepage": "https://github.com/minicli/application",
