--- a/.github/workflows/images-test.yml
+++ b/.github/workflows/images-test.yml
@@ -28,7 +28,12 @@ jobs:
           YAMLDOCS_OUTPUT: "${{ github.workspace }}/workdir"
 
       - name: "Copy updates to main repo"
-        run: cp -R "${{ github.workspace }}/workdir/*" "${{ github.workspace }}/autodocs/workdir/markdown/"
+        uses: chainguard-dev/deved-autodocs@1.0.2
+        with:
+          command: update images
+        env:
+          YAMLDOCS_OUTPUT: "${{ github.workspace }}/workdir"
+          YAMLDOCS_COPY: "${{ github.workspace }}/autodocs/workdir/markdown"
 
       - name: Create a PR
         uses: peter-evans/create-pull-request@v4
