--- a/.github/workflows/images-test.yml
+++ b/.github/workflows/images-test.yml
@@ -28,12 +28,7 @@ jobs:
           YAMLDOCS_OUTPUT: "${{ github.workspace }}/workdir"
 
       - name: "Copy updates to main repo"
-        uses: chainguard-dev/deved-autodocs@1.0.2
-        with:
-          command: update images
-        env:
-          YAMLDOCS_OUTPUT: "${{ github.workspace }}/workdir"
-          YAMLDOCS_COPY: "${{ github.workspace }}/autodocs/workdir/markdown"
+        run: cp -R "${{ env.GITHUB_WORKSPACE }}/workdir/*" "${{ env.GITHUB_WORKSPACE }}/autodocs/workdir/markdown/"
 
       - name: Create a PR
         uses: peter-evans/create-pull-request@v4
