--- a/.github/workflows/images-test.yml
+++ b/.github/workflows/images-test.yml
@@ -28,7 +28,7 @@ jobs:
           YAMLDOCS_OUTPUT: "${{ github.workspace }}/workdir"
 
       - name: "Copy updates to main repo"
-        run: cp -R "${{ env.GITHUB_WORKSPACE }}/workdir/*" "${{ env.GITHUB_WORKSPACE }}/autodocs/workdir/markdown/"
+        run: cp -R "${{ github.workspace }}/workdir" "${{ github.workspace }}/autodocs/workdir/markdown"
 
       - name: Create a PR
         uses: peter-evans/create-pull-request@v4
