--- a/.github/workflows/images-test.yml
+++ b/.github/workflows/images-test.yml
@@ -19,7 +19,7 @@ jobs:
           path: images
 
       - name: "Set up workdir"
-        run: mkdir -p "${{ github.workspace }}/$WORKDIR" && chmod 777 "${{ github.workspace }}/$WORKDIR"
+        run: mkdir -p "${{ github.workspace }}/${{ env.WORKDIR }}" && chmod 777 "${{ github.workspace }}/${{ env.WORKDIR }}"
 
       - name: "Update the reference docs for Chainguard Images"
         uses: chainguard-dev/deved-autodocs@1.0.2
@@ -27,18 +27,18 @@ jobs:
           command: build images
         env:
           YAMLDOCS_SOURCE: "${{ github.workspace }}/images/images"
-          YAMLDOCS_OUTPUT: "${{ github.workspace }}/$WORKDIR"
+          YAMLDOCS_OUTPUT: "${{ github.workspace }}/${{ env.WORKDIR }}"
 
       - name: "Copy updates to main repo"
         run: |
-          ls "${{ github.workspace }}/$WORKDIR" && \
+          ls "${{ github.workspace }}/${{ env.WORKDIR }}" && \
           echo "Copying files..." && \
-          cp -R "${{ github.workspace }}/$WORKDIR" "${{ github.workspace }}/autodocs/workdir" && \
+          cp -R "${{ github.workspace }}/${{ env.WORKDIR }}" "${{ github.workspace }}/autodocs/workdir" && \
           echo "Finished copy" 
 
       - name: "Debug content dir"
         run: |
-          ls "${{ github.workspace }}/autodocs/workdir/$WORKDIR"
+          ls "${{ github.workspace }}/autodocs/workdir/${{ env.WORKDIR }}"
 
       - name: Create a PR
         uses: peter-evans/create-pull-request@v4
