Adding metadata to action PR

--- a/.github/workflows/images-test.yml
+++ b/.github/workflows/images-test.yml
@@ -46,7 +46,7 @@ jobs:
             documentation
             images
             automated
-          team-reviewers: |
-            owners
-            maintainers
+          assignees: erikaheidi
+          reviewers: erikaheidi
+
 
