--- a/.github/workflows/notify_on_pr.yml
+++ b/.github/workflows/notify_on_pr.yml
@@ -1,8 +1,7 @@
 name: Send Slack Notification about new Autodocs PR
 on:
   pull_request:
-    types:
-      - opened
+    branches: [ main ]
   workflow_dispatch:
 jobs:
   main:
