--- a/.github/workflows/notify_on_pr.yml
+++ b/.github/workflows/notify_on_pr.yml
@@ -1,7 +1,8 @@
 name: Send Slack Notification about new Autodocs PR
 on:
   pull_request:
-    branches: [ main ]
+    types:
+      - opened
   workflow_dispatch:
 jobs:
   main:
@@ -9,7 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "Send notification to Slack"
-        uses: chainguard-dev/deved-autodocs@1.0.6
+        uses: chainguard-dev/deved-autodocs@1.0.7
         with:
           command: notify pullrequest
-          pr_number: ${{ github.event.pull_request.number }}
+        env:
+          AUTODOCS_SLACK_PRIMARY: ${{ secrets.AUTODOCS_SLACK_PRIMARY }}
+          AUTODOCS_SLACK_SECONDARY: ${{ secrets.AUTODOCS_SLACK_SECONDARY }}
+          AUTODOCS_SLACK_GENERAL: ${{ secrets.AUTODOCS_SLACK_GENERAL }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+          PR_CHANGED: ${{ github.event.pull_request.changedFiles }}
+          PR_STATE: ${{ github.event.pull_request.changedFiles }}
