Moving templates and adding basic changelog

--- a/workflow.yaml
+++ b/workflow.yaml
@@ -1,31 +1,59 @@
-name: Update Chainguard Images Reference
+name: Test Workflow for Images Reference Docs
 on:
-  schedule:
-    - cron: "0 0 1 * *"
   workflow_dispatch:
+env:
+  WORKDIR: images-reference
+  CHANGELOG: "${{ github.workspace }}/changelog.txt"
 jobs:
   main:
     runs-on: ubuntu-latest
+    outputs:
+      build-output: ${{ steps.images-build-output.changelog }}
     steps:
       - name: "Check out Destination Repo"
         uses: actions/checkout@v2
         with:
-          path: edu
+          path: autodocs
+
       - name: "Check out Images Monorepo"
         uses: actions/checkout@v2
         with:
           repository: chainguard-images/images
           path: images
+
+      - name: "Set up workdir"
+        run: mkdir -p "${{ github.workspace }}/${{ env.WORKDIR }}" && chmod 777 "${{ github.workspace }}/${{ env.WORKDIR }}"
+
       - name: "Update the reference docs for Chainguard Images"
-        uses: chainguard-dev/deved-autodocs@v1.0
+        uses: chainguard-dev/deved-autodocs@1.0.5
         with:
-          command: build images
+          command: "build images changelog=${{ env.CHANGELOG }}"
         env:
           YAMLDOCS_SOURCE: "${{ github.workspace }}/images/images"
-          YAMLDOCS_OUTPUT: "${{ github.workspace }}/edu/content/chainguard/chainguard-images/images"
+          YAMLDOCS_OUTPUT: "${{ github.workspace }}/${{ env.WORKDIR }}"
+          YAMLDOCS_TEMPLATES: "{{ github.workspace }}/autodocs/templates"
+
+      - name: "Copy updates to main repo"
+        run: |
+          echo "Copying files..." && \
+          cp -R "${{ github.workspace }}/${{ env.WORKDIR }}" "${{ github.workspace }}/autodocs/workdir" && \
+          echo "Finished copy" 
+
+      - name: "Get Changelog"
+        run: echo "changelog=`cat README.md`" >> "$GITHUB_OUTPUT"
+        id: images-build-output
+
       - name: Create a PR
-        uses: peter-evans/create-pull-request@v3
+        uses: peter-evans/create-pull-request@v4
         with:
+          path: "${{ github.workspace }}/autodocs"
           commit-message: Update Images Reference
-          title: "[automated] Update Images Reference Docs"
-          token: ${{ secrets.GITHUB_TOKEN }}
+          title: "[AutoDocs] Update Images Reference Docs"
+          body: "${{ steps.images-build-output.changelog }}"
+          signoff: true
+          labels: |
+            documentation
+            images
+            automated
+          assignees: erikaheidi
+
