--- a/.github/workflows/images-test.yml
+++ b/.github/workflows/images-test.yml
@@ -3,7 +3,6 @@ on:
   workflow_dispatch:
 env:
   WORKDIR: images-reference
-  CHANGELOG: "${{ github.workspace }}/${{ github.env.WORKDIR }}/changelog.txt"
 jobs:
   main:
     runs-on: ubuntu-latest
@@ -27,7 +26,7 @@ jobs:
       - name: "Update the reference docs for Chainguard Images"
         uses: chainguard-dev/deved-autodocs@1.3.3
         with:
-          command: "build images changelog=${{ env.CHANGELOG }}"
+          command: "build images changelog=${{ github.workspace }}/changelog.txt"
         env:
           YAMLDOCS_SOURCE: "${{ github.workspace }}/images/images"
           YAMLDOCS_OUTPUT: "${{ github.workspace }}/${{ env.WORKDIR }}"
@@ -40,7 +39,7 @@ jobs:
           echo "Finished copy" 
 
       - name: "Get Changelog"
-        run: echo "changelog=`cat ${{ env.CHANGELOG }}`" >> "$GITHUB_OUTPUT"
+        run: echo "changelog=`cat ${{ github.workspace }}/changelog.txt`" >> "$GITHUB_OUTPUT"
         id: images-build-output
 
       - name: Create a PR
@@ -57,3 +56,4 @@ jobs:
             automated
           assignees: erikaheidi
 
+ images-test.yml 
