--- a/.github/workflows/images-test.yml
+++ b/.github/workflows/images-test.yml
@@ -3,6 +3,7 @@ on:
   workflow_dispatch:
 env:
   WORKDIR: images-reference
+  CHANGELOG: "${{ github.workspace }}/changelog.txt"
 jobs:
   main:
     runs-on: ubuntu-latest
@@ -24,9 +25,9 @@ jobs:
         run: mkdir -p "${{ github.workspace }}/${{ env.WORKDIR }}" && chmod 777 "${{ github.workspace }}/${{ env.WORKDIR }}"
 
       - name: "Update the reference docs for Chainguard Images"
-        uses: chainguard-dev/deved-autodocs@1.3.3
+        uses: chainguard-dev/deved-autodocs@1.3.4
         with:
-          command: "build images changelog=${{ github.workspace }}/changelog.txt"
+          command: build images --changelog
         env:
           YAMLDOCS_SOURCE: "${{ github.workspace }}/images/images"
           YAMLDOCS_OUTPUT: "${{ github.workspace }}/${{ env.WORKDIR }}"
@@ -55,4 +56,3 @@ jobs:
             images
             automated
           assignees: erikaheidi
-          
