--- a/.github/workflows/images-test.yml
+++ b/.github/workflows/images-test.yml
@@ -3,7 +3,6 @@ on:
   workflow_dispatch:
 env:
   WORKDIR: images-reference
-  CHANGELOG: "${{ github.workspace }}/changelog.txt"
 jobs:
   main:
     runs-on: ubuntu-latest
@@ -22,16 +21,20 @@ jobs:
           path: images
 
       - name: "Set up workdir"
-        run: mkdir -p "${{ github.workspace }}/${{ env.WORKDIR }}" && chmod 777 "${{ github.workspace }}/${{ env.WORKDIR }}"
+        run: |
+          mkdir -p "${{ github.workspace }}/${{ env.WORKDIR }}" && \
+          chmod 777 "${{ github.workspace }}/${{ env.WORKDIR }}"
 
       - name: "Update the reference docs for Chainguard Images"
-        uses: chainguard-dev/deved-autodocs@1.3.4
+        uses: chainguard-dev/deved-autodocs@1.3.5
         with:
           command: build images --changelog
         env:
           YAMLDOCS_SOURCE: "${{ github.workspace }}/images/images"
           YAMLDOCS_OUTPUT: "${{ github.workspace }}/${{ env.WORKDIR }}"
           YAMLDOCS_TEMPLATES: "${{ github.workspace }}/autodocs/workdir/templates"
+          YAMLDOCS_CHANGELOG: "${{ github.workspace }}/autodocs/workdir/changelog.md"
+          YAMLDOCS_LAST_UPDATE: "${{ github.workspace }}/autodocs/workdir/last-update.md"
 
       - name: "Copy updates to main repo"
         run: |
@@ -40,10 +43,11 @@ jobs:
           echo "Finished copy" 
 
       - name: "Get Changelog"
-        run: echo "changelog=`cat ${{ github.workspace }}/changelog.txt`" >> "$GITHUB_OUTPUT"
+        run: echo "changelog=`cat ${{ github.workspace }}/autodocs/workdir/last-update.md`" >> "$GITHUB_OUTPUT"
         id: images-build-output
 
       - name: Create a PR
+        id: cpr
         uses: peter-evans/create-pull-request@v4
         with:
           path: "${{ github.workspace }}/autodocs"
@@ -56,3 +60,18 @@ jobs:
             images
             automated
           assignees: erikaheidi
+
+      - name: "Send notification to Slack"
+        if: ${{ steps.cpr.outputs.pull-request-number }}
+        uses: chainguard-dev/deved-autodocs@1.3.2
+        with:
+          command: notify pullrequest
+        env:
+          AUTODOCS_SLACK_PRIMARY: ${{ secrets.AUTODOCS_SLACK_PRIMARY }}
+          AUTODOCS_SLACK_SECONDARY: ${{ secrets.AUTODOCS_SLACK_SECONDARY }}
+          AUTODOCS_SLACK_GENERAL: ${{ secrets.AUTODOCS_SLACK_GENERAL }}
+          PR_NUMBER: ${{ steps.cpr.outputs.pull-request-number }}
+          PR_ACTION: ${{ steps.cpr.outputs.pull-request-operation }}
+          PR_URL: ${{ steps.cpr.outputs.pull-request-url }}
+          PR_SHA: ${{ steps.cpr.outputs.pull-request-head-sha }}
+          PR_SUMMARY: ${{ steps.images-build-output.changelog }}
