--- a/workflow.yaml
+++ b/workflow.yaml
@@ -26,24 +26,35 @@ jobs:
           chmod 777 "${{ github.workspace }}/${{ env.WORKDIR }}"
 
       - name: "Update the reference docs for Chainguard Images"
-        uses: chainguard-dev/deved-autodocs@1.3.5
+        uses: chainguard-dev/deved-autodocs@1.3.6
         with:
           command: build images
         env:
           YAMLDOCS_SOURCE: "${{ github.workspace }}/images/images"
           YAMLDOCS_OUTPUT: "${{ github.workspace }}/${{ env.WORKDIR }}"
           YAMLDOCS_TEMPLATES: "${{ github.workspace }}/autodocs/workdir/templates"
-          YAMLDOCS_CHANGELOG: "${{ github.workspace }}/autodocs/workdir/changelog.md"
-          YAMLDOCS_LAST_UPDATE: "${{ github.workspace }}/autodocs/workdir/last-update.md"
+          YAMLDOCS_CHANGELOG: "${{ github.workspace }}/${{ env.WORKDIR }}/changelog.md"
+          YAMLDOCS_LAST_UPDATE: "${{ github.workspace }}/${{ env.WORKDIR }}/last-update.md"
+          YAMLDOCS_DIFF_SOURCE: "${{ github.workspace }}/autodocs/workdir/{{ env.WORKDIR }}"
+
+      - name: "Copy changelog to root folder"
+        run: |
+          mv "${{ github.workspace }}/${{ env.WORKDIR }}/changelog.md" \
+          "${{ github.workspace }}/${{ env.WORKDIR }}/last-update.md" \
+          "${{ github.workspace }}/autodocs"
 
       - name: "Copy updates to main repo"
         run: |
           echo "Copying files..." && \
           cp -R "${{ github.workspace }}/${{ env.WORKDIR }}" "${{ github.workspace }}/autodocs/workdir" && \
-          echo "Finished copy" 
+          echo "Finished copy"
 
       - name: "Get Changelog"
-        run: echo "changelog=`cat ${{ github.workspace }}/autodocs/workdir/last-update.md`" >> "$GITHUB_OUTPUT"
+        run: |
+          EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
+          echo "CHANGELOG<<$EOF" >> $GITHUB_ENV
+          echo "`cat ${{ github.workspace }}/autodocs/last-update.md`" >> $GITHUB_ENV
+          echo "$EOF" >> $GITHUB_ENV
         id: images-build-output
 
       - name: Create a PR
@@ -53,7 +64,7 @@ jobs:
           path: "${{ github.workspace }}/autodocs"
           commit-message: Update Images Reference
           title: "[AutoDocs] Update Images Reference Docs"
-          body: "${{ steps.images-build-output.changelog }}"
+          body: "${{ env.CHANGELOG }}"
           signoff: true
           labels: |
             documentation
@@ -74,4 +85,4 @@ jobs:
           PR_ACTION: ${{ steps.cpr.outputs.pull-request-operation }}
           PR_URL: ${{ steps.cpr.outputs.pull-request-url }}
           PR_SHA: ${{ steps.cpr.outputs.pull-request-head-sha }}
-          PR_SUMMARY: ${{ steps.images-build-output.changelog }}
+          PR_SUMMARY: ${{ env.CHANGELOG }}
