--- a/.github/workflows/images-test.yml
+++ b/.github/workflows/images-test.yml
@@ -1,8 +1,11 @@
 name: Test Workflow for Images Reference Docs
+
 on:
   workflow_dispatch:
+
 env:
   WORKDIR: images-reference
+
 jobs:
   main:
     runs-on: ubuntu-latest
@@ -10,12 +13,12 @@ jobs:
       build-output: ${{ steps.images-build-output.changelog }}
     steps:
       - name: "Check out Destination Repo"
-        uses: actions/checkout@v2
+        uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3 # v3.5.0
         with:
           path: autodocs
 
       - name: "Check out Images Monorepo"
-        uses: actions/checkout@v2
+        uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3 # v3.5.0
         with:
           repository: chainguard-images/images
           path: images
@@ -26,7 +29,7 @@ jobs:
           chmod 777 "${{ github.workspace }}/${{ env.WORKDIR }}"
 
       - name: "Update the reference docs for Chainguard Images"
-        uses: chainguard-dev/deved-autodocs@1.3.6
+        uses: chainguard-dev/deved-autodocs@37cc961b71c9b6c1eaf4e0ad5f2e5a66ba94918c # 1.3.6
         with:
           command: build images
         env:
@@ -52,14 +55,14 @@ jobs:
       - name: "Get Changelog"
         run: |
           EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
-          echo "CHANGELOG<<$EOF" >> $GITHUB_ENV
-          echo "`cat ${{ github.workspace }}/autodocs/last-update.md`" >> $GITHUB_ENV
-          echo "$EOF" >> $GITHUB_ENV
+          echo "CHANGELOG<<$EOF" >> "$GITHUB_ENV"
+          echo "`cat ${{ github.workspace }}/autodocs/last-update.md`" >> "$GITHUB_ENV"
+          echo "$EOF" >> "$GITHUB_ENV"
         id: images-build-output
 
       - name: Create a PR
         id: cpr
-        uses: peter-evans/create-pull-request@v4
+        uses: peter-evans/create-pull-request@38e0b6e68b4c852a5500a94740f0e535e0d7ba54 # v4.2.4
         with:
           path: "${{ github.workspace }}/autodocs"
           commit-message: Update Images Reference
@@ -74,7 +77,7 @@ jobs:
 
       - name: "Send notification to Slack"
         if: ${{ steps.cpr.outputs.pull-request-number }}
-        uses: chainguard-dev/deved-autodocs@1.3.6
+        uses: chainguard-dev/deved-autodocs@37cc961b71c9b6c1eaf4e0ad5f2e5a66ba94918c # 1.3.6
         with:
           command: notify pullrequest
         env:
@@ -86,4 +89,3 @@ jobs:
           PR_URL: ${{ steps.cpr.outputs.pull-request-url }}
           PR_SHA: ${{ steps.cpr.outputs.pull-request-head-sha }}
           PR_SUMMARY: ${{ env.CHANGELOG }}
-          
