--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     }
   },
   "require": {
-    "minicli/minicli": "^3.0",
-    "minicli/command-help": "^0.1.0",
-    "erikaheidi/yamldocs": "^0.3.0",
+    "minicli/minicli": "^4.0",
+    "minicli/command-help": "^1.0.0",
+    "yamldocs/yamldocs": "^1.0.0",
     "minicli/curly": "^0.2.2"
   },
   "require-dev": {
