--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "minicli/minicli": "^4.0",
     "minicli/command-help": "^1.0.0",
     "yamldocs/yamldocs": "^1.0.0",
-    "minicli/curly": "^0.2.2"
+    "minicli/curly": "^0.2.2",
+    "minicli/minicache": "^0.2.0"
   },
   "require-dev": {
     "pestphp/pest": "^1.21"
