--- a/yamldocs.yaml
+++ b/yamldocs.yaml
@@ -16,6 +16,8 @@ builders:
     pages:
       - App\Page\ImageOverview
       - App\Page\ImageSpecs
+      - App\Page\ImageTags
 
 templatesDir: templates
+cacheDir: workdir/cache
 debug: true
