--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "ext-mbstring": "*"
   },
   "require-dev": {
-    "pestphp/pest": "^1.21"
+    "pestphp/pest": "^1.21",
+    "mockery/mockery": "^1.6"
   },
   "scripts": {
     "test" : ["pest"]
