--- a/yamldocs.yaml
+++ b/yamldocs.yaml
@@ -14,6 +14,7 @@ builders:
       - App\Page\ImageOverview
       - App\Page\ImageTags
       - App\Page\ImageProvenance
+      - App\Page\ImageSpecs
 
 templatesDir: templates
 cacheDir: workdir/cache
